# FooGame

./: .gitignore  CMakeLists.txt  README.md  main.c  process_events.c
Game/: CMakeLists.txt
Game/Headers/: renderer.h
Game/Sources/: CMakeLists.txt  initclose.c  renderer.c
include/: process_events.h
